--- a/index.html
+++ b/index.html
@@ -48,16 +48,13 @@
 									<header class="major">
 										<h2>GitHub Repositories Overview</h2>
 										<h3>Intro</h3>
-										<p>Data Lake consists of following steps:</p>
-											<ol>
-												<li>CSV as dasta extracts from different systems.</li>
-												<li>Python for ETL (extract, transform, load).</li>
-												<li>Tableau for data visualization dasboards.</li>
-												<li>Server to get dasboard published for stakeholders.</li>
-												<li>Busines Analysis.</li>
-												<li>New data coming in from systems to storage.</li>
-												<li>Go to step 1.</li>
-											<ol>
+										<p>Repositories consist of:</p>
+											<ul>
+												<li>concept understanding,</li>
+												<li>problem description,</li>
+												<li>the way to solution,</li>
+												<li>applied technology (source code).</li>
+											<ul>
 									</header>
 								</div>
 							</section>
@@ -68,8 +65,9 @@
 									<h3>Features</h3>
 									<p>App includes following features:</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-check">CSV</li>
-										<li class="icon solid fa-check">ETL</li>
+										<li class="icon solid fa-check">Screens</li>
+										<li class="icon solid fa-check">Description</li>
+										<li class="icon solid fa-check">Source code</li>
 									</ul>
 								</div>
 							</section>
@@ -78,6 +76,73 @@
 							<section id="three">
 								<div class="container">
 									<h3>Demo</h3>
+
+									<p>Data Analysis:</p>
+									<ul>
+										<li>Business Analysis with Python (Pandas, Numpy, Matplotlib)</li>
+										<li>data structures: linked lists, graphs, dictionaries,</li>
+										<li>Regular Expression with Python,</li>
+										<li>SQL querying for ad-hoc analysis.</li>
+									</ul>
+
+									<p>Big Data:</p>
+									<ul>
+										<li>Data Lakes: flat-files -> Python -> Tableau -> Server -> Business Analysis -> new data -> flat-files ...</li>
+										<li>functional programming with Spark (PySpark interface for Python)</li>
+										<li>microservices in event-driven architecture of Apache Kafka (local machine),</li>
+										<li>building, scheduling and monitoring workflows with Apache Airflow (Ubuntu).</li>
+									</ul>
+
+									<p>Machine Learning:</p>
+									<ul>
+										<li>libraries: OpenCV, Scikit-learn, Sklearn, Tensorflow, Nltk.</li>
+										<li>methods: K Nearest Neighbors, Linear Regression, Support Vector Machine, Decision Tree.</li>
+									</ul>
+
+									<p>Automation and algorithms:</p>
+									<ul>
+										<li>C++ greedy algorithms for making opitmal choice locally in order to reach global optimum,</li>
+										<li>Python algorithms for anomaly detection, optimal scenario finding, stable matching,</li>
+										<li>automated unit and integration tests for Python scripts,</li>
+										<li>web scraping with Selenium and BeatifulSoup,</li>
+										<li>Excel integration with SQLite database using VBA, using Excel as user interface for querying a database,</li>
+										<li>Recursion (when function calls itself) applied for system files management,</li>
+										<li>VBA scripting for automating daily tasks.</li>
+									</ul>
+
+									<p>Object oriented software design:</p>
+									<ul>
+										<li>Object-oriented Analysis and Design (OOAD) along with Unified Modeling Language (UML) for an app design,</li>
+										<li>taking advantage of Object-Relational Mapping for mapping Python objects into relational database.</li>
+									</ul>
+
+									<p>Web app frameworks:</p>
+									<ul>
+										<li>FLASK Data Pipeline for data streaming simulation (client app -> API -> database),</li>
+										<li>RESTful API in FLASK along with HTTP requests automated testing (SQLAlchemy database implemented),</li>
+										<li>FLASK for generating PDFs from HTML template,</li>
+										<li>Django full-stack development utilizing object-oriented database model (non-commercial full stack app).</li>
+									</ul>
+
+									<p>Web programming:</p>
+									<ul>
+										<li>PHP and MySQL for managing web content (non-commercial full stack app),</li>
+										<li>HTML, CSS and JavaScript features.</li>
+									</ul>
+
+									<p>Other:</p>
+									<ul>
+										<li>container technologies: Docker and Kubernetes,</li>
+										<li>infrastructure as code: Terraform,</li>
+										<li>version control system: Git and GitHub,</li>
+										<li>message queue: Redis,</li>
+										<li>asynchronous tasks execution: Celery,</li>
+										<li>modeling Blockchain architecture,</li>
+										<li>automating Outlook with Python,</li>
+										<li>multiprocessing and threading in Python</li>
+										<li>TPC for client - server with database modeling (Python).</li>
+									</ul>
+
 								</div>
 							</section>
 
@@ -85,6 +150,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Setup</h3>
+									<p>No installation required.</p>
 								</div>
 							</section>
 
