--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 									<p>Big Data:</p>
 									<ul>
-										<li>Data Lakes: flat-files -> Python -> Tableau -> Server -> Business Analysis -> new data -> flat-files ...</li>
+										<li>Data Warehousing: flat-files -> Python -> Tableau -> Server -> Business Analysis -> new data -> flat-files ...</li>
 										<li>functional programming with Spark (PySpark interface for Python)</li>
 										<li>microservices in event-driven architecture of Apache Kafka (local machine),</li>
 										<li>building, scheduling and monitoring workflows with Apache Airflow (Ubuntu).</li>
